# dudziogra

./: .gitignore  .virtualenv  dudziogra.apk  index.html  pyproject.toml
game/: cli.py  components.py  engine.py  main.py  types.py  world.py
game/assets/: __init__.py  loader.py
